--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <!--Start of Tawk.to Script-->
   <!--Start of Tawk.to Script-->
+  <!--Start of Tawk.to Script-->
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function () {
@@ -20,6 +21,7 @@
       s0.parentNode.insertBefore(s1, s0);
     })();
   </script>
+  <!--End of Tawk.to Script-->
   <!--End of Tawk.to Script-->
   <!--End of Tawk.to Script-->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
